# turingcodec

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  README.md
.travis/: build.sh  osx_compiler.sh
boost/: CMakeLists.txt
boost/boost/math/special_functions/: ellint_2.hpp  ellint_3.hpp
boost/boost/math/special_functions/detail/: polygamma.hpp
boost/boost/math/tools/: config.hpp  polynomial.hpp
boost/boost/type_traits/: has_nothrow_assign.hpp  has_nothrow_constructor.hpp  has_trivial_assign.hpp  is_nothrow_move_constructible.hpp
boost/boost/utility/: string_view.hpp
boost/libs/chrono/src/: CMakeLists.txt
boost/libs/filesystem/src/: CMakeLists.txt
boost/libs/program_options/src/: CMakeLists.txt  value_semantic.cpp
boost/libs/system/src/: CMakeLists.txt
boost/libs/timer/src/: CMakeLists.txt
havoc/: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Jit.h  README.md  diff.cpp  diff.h  get-intel-sde  hadamard.cpp  hadamard.h  havoc.cpp  havoc.h  havoc_test.c  havoc_test.h  main.cpp  pred_inter.cpp  pred_inter.h  pred_intra.cpp  pred_intra.h  quantize.cpp  quantize.h  residual.cpp  residual.h  residual_decode.cpp  residual_decode.h  sad.cpp  sad.h  ssd.cpp  ssd.h  transform.cpp  transform.h  xbyak.h  xbyak_bin2hex.h  xbyak_util.h
test/: excerpt_(CC)_caminandes.com_640x360.hevc
turing/: .gitignore  AdaptiveQuantisation.h  Aps.h  Binarization.h  BitField.h  BlockData.h  CMakeLists.txt  Cabac.cpp  Cabac.h  CabacWriter.h  CandModeList.h  CodeCache.h  CodedData.h  ConformanceStreams.h  ContextModel.cpp  ContextModel.h  Cost.h  Decode.h  DecodeCtu.cpp  DecodeRbsp.cpp  DecodedPicture.h  Dsp.h  EncSao.h  EncodeResidual.cpp  EncodeResidual.h  EncodeResidual.hpp  EncodeResidualPopcnt.cpp  Encoder.cpp  Encoder.h  EstimateIntraComplexity.h  EstimateRate.h  FixedPoint.h  GetGitRevisionDescription.cmake  Global.h  GlobalState.h  Handlers.h  HevcMath.h  HevcTypes.h  InputQueue.cpp  InputQueue.h  (+92 more)
turing/sei/: ReadSei.h  active_parameter_sets.h  all.h  alpha_channel_info.h  alternative_transfer_characteristics.h  bsp_initial_arrival_time.h  bsp_nesting.h  buffering_period.h  chroma_resampling_filter_hint.h  colour_remapping_info.h  content_light_level.h  decoded_picture_hash.h  decoding_unit_info.h  deinterlaced_field_identification.h  display_orientation.h  filler_payload.h  film_grain_characteristics.h  frame_field_info.h  frame_packing_arrangement.h  inter_layer_constrained_tile_sets.h  knee_function_info.h  layers_not_present.h  mastering_display_colour_volume.h  no_display.h  overlay_info.h  pan_scan_rect.h  pic_timing.h  picture_snapshot.h  post_filter_hint.h  progressive_refinement_segment_end.h  progressive_refinement_segment_start.h  recovery_point.h  region_refresh_info.h  reserved_sei_message.h  scalable_nesting.h  scene_info.h  segmented_rect_frame_packing_arrangement.h  structure_of_pictures_info.h  temporal_motion_constrained_tile_sets.h  temporal_mv_prediction_constraints.h  (+5 more)
